@@ -1166,7 +1166,12 @@ StringFirstCmd(
 	}
     }
 
-    if (length1 > 0) {
+    /*
+     * If the length of the needle is more than the length of the haystack, it
+     * cannot be contained in there so we can avoid searching. [Bug 2960021]
+     */
+
+    if (length1 > 0 && length1 <= length2) {
 	register Tcl_UniChar *p, *end;
 
 	end = ustring2 + length2 - length1 + 1;
@@ -1269,7 +1274,12 @@ StringLastCmd(
 	p = ustring2 + length2 - length1;
     }
 
-    if (length1 > 0) {
+    /*
+     * If the length of the needle is more than the length of the haystack, it
+     * cannot be contained in there so we can avoid searching. [Bug 2960021]
+     */
+
+    if (length1 > 0 && length1 <= length2) {
 	for (; p >= ustring2; p--) {
 	    /*
 	     * Scan backwards to find the first character.
